--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyProject"
         tools:targetApi="31">
         <activity
+            android:name=".CartochkaActivity"
+            android:exported="false" />
+        <activity
             android:name=".OformlActivity"
             android:exported="false" />
         <activity
@@ -34,12 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data
-            android:name="com.razorpay.Apikey"
-            android:value="rzp_test_EgmQoGwAT33eJi"/>
-        <meta-data
-            android:name="com.google.gms.wallet.api.enabled"
-            android:value="true" />
     </application>
 
 </manifest>
